--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "node init.js && next dev",
+    "build": "node init.js && next build",
+    "start": "node init.js && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,6 +17,11 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sqlite3": "^5.1.6",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "adm-zip": "^0.5.10",
+    "node-fetch": "^2.6.9"
   }
 }
