--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: pricecatcher
-    restart: always
+    restart: "no"
     volumes:
       - ./:/app
       - /app/node_modules
